--- a/people.html
+++ b/people.html
@@ -1,1 +1,63 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ROOP TECH - People</title>
+    <link rel="stylesheet" href="people.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">ROOPTECH</div>
+            <ul class="nav-links">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="product.html">PRODUCTS</a></li>
+                <li><a href="people.html" class="active">PEOPLE</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+            <div class="search-bar">
+                <input type="text" placeholder="Enter to Search">
+                <button>Search</button>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="council-grid">
+            <div class="council-card">
+                <img src="path/to/roop_sagar.jpg" alt="Roop Sagar">
+                <h3>ROOP SAGAR</h3>
+                <p class="position">CEO</p>
+            </div>
+            <div class="council-card">
+                <img src="C:\Users\Admin\Downloads\ratan tata.jpeg" alt="Ratan Tata">
+                <h3>RATAN TATA</h3>
+                <p class="position">CEO, Co-Founder</p>
+            </div>
+            <div class="council-card">
+                <img src="C:\Users\Admin\Downloads\steve.jpeg" alt="Steve Jobs">
+                <h3>STEVE JOBS</h3>
+                <p class="position">CTO, Co-Founder</p>
+            </div>
+            <div class="council-card">
+                <img src="C:\Users\Admin\Downloads\sundar.jpeg"alt="Sundar">
+                <h3>SUNDAR</h3>
+                <p class="position">DIRECTOR</p>
+            </div>
+            <div class="council-card">
+                <img src="C:\Users\Admin\Downloads\walt.jpeg" alt="Walt Disney">
+                <h3>WALT DISNEY</h3>
+                <p class="position">Asst. Director</p>
+            </div>
+            <div class="council-card">
+                <img src="C:\Users\Admin\Downloads\Elon_Musk.jpg" alt="Elon Musk">
+                <h3>ELON MUSK</h3>
+                <p class="position">Dy. Director</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>DESIGNED AND DEVELOPED BY VISHNUPATHI A (212221223004)</p>
+    </footer>
+</body>
+</html>
