--- a/people.html
+++ b/people.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +26,7 @@
     <main>
         <div class="council-grid">
             <div class="council-card">
-                <img src="path/to/roop_sagar.jpg" alt="Roop Sagar">
+                <img src="C:\Users\Admin\Downloads\bill gats.jpeg" alt="Bill Gates">
                 <h3>ROOP SAGAR</h3>
                 <p class="position">CEO</p>
             </div>
